switch to inline auth, based on iken updates added sample auth to example (#55)
